name and email added to branch

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 <body>
     <div class="skills">
-        <a href="#">Active Listening</a><br>
-        <a href="#">Problem Solving</a><br>
-        <a href="#">Smart work</a><br>
-        <a href="#">Teamwork</a><br>
-        <a href="#">Effective Communication</a>
+        <a href="./skill1.html">Active Listening</a><br>
+        <a href="./skill2.html">Problem Solving</a><br>
+        <a href="./skill3.html">Smart work</a><br>
+        <a href="./skill4.html">Teamwork</a><br>
+        <a href="./skill5.html">Effective Communication</a>
+        <h1>Ramakant Pendke</h1>
+        <h1>ramakantpendke@gmail.com</h1>
     </div>
 </body>
 </html>
